[package]
name = "network-scanner-pro"
version = "1.0.0"
description = "Professional Network Scanner"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = ["shell-open"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
socket2 = "0.5"
trust-dns-resolver = "0.23"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
